--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hashtager
-description: Widgets and functions to implement hashtag decorated text. Decorates the words which start with `#` like a Twitter.
+description: Widgets and functions to implement hashtag decorated text. Decorates the words which start with `#` like Instagram.
 version: 1.0.1
 author: Ehsan Amiri <ehsanamiri.dev@gmail.com>
 homepage: https://github.com/iehsanamiri/hashtager
